1999-10-08  Thomas Bushnell, BSG  <tb@mit.edu>

	* bootstrap.c: (DEFAULT_ROOT): Remove macro.
	(main): If no root device was specified, then prompt as if the
	user had specified -a.

1999-10-06  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (DEFAULT_ROOT): Change to "hd0s1".

1999-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (parse_script): Add one to the buffer size so we can
	null-terminate after the end of the file.

1999-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* ext2_file_io.c, ffs_file_io.c, minix_file_io.c: Remove fs-specific
	routines *_page_{read,write}_file_direct.  Moved to ...
	* file_io.c (page_read_file_direct, page_write_file_direct): Don't
	call fs-specific routine, these are not fs-specific.  Instead,
	replaced with former fs-specific routines (which were all identical).
	Read and write more than a fs block when disk blocks are contiguous.

	* default_pager.c (new_partition): When reading Linux signature page,
	handle pager_read_file_direct returning sub-page blocks.

1999-06-03  Mark Kettenis  <kettenis@gnu.org>

	* default_pager.c (new_partition): Declare `waste' as `int'
	instead of `unsigned int'.

1999-06-02  Roland McGrath  <roland@baalperazim.frob.com>

	* load.c (boot_script_exec_cmd): Copy environment from our `environ'
	onto the new task's stack along with its arguments.

	* bootstrap.c (main): If we have a MULTIBOOT_CMDLINE environment
	variable, set its value as ${kernel-command-line} for boot scripts.

1999-05-29  Roland McGrath  <roland@baalperazim.frob.com>

	* bootstrap.c (main): Define $(serverboot) function for "serverboot
	controls", control command replacing the pathname.  For command "die",
	terminate ourselves after running the boot script, no default pager.

1999-05-23  Roland McGrath  <roland@baalperazim.frob.com>

	* default_pager.c (new_partition): Fix arg order in printf for
	linux-2.2 signature page.

1999-05-20  Roland McGrath  <roland@baalperazim.frob.com>
